# My-Finance-Planner

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  lint.sh  pyproject.toml
backend/backend/: app.py  dependencies.py  environments.py  models.py  schemas.py
backend/backend/config/database/: postgres.py
backend/backend/routes/login/: login.py
backend/migrations/: env.py
backend/migrations/versions/: 221d11ab1fa5_initial_migration_complete.py  fb0dc0eb8caa_create_users_table.py
backend/src/: main.py
backend/src/config/database/: environments.py  models.py  postgres.py
backend/src/modules/accounts/: controller.py  model.py  schema.py
backend/src/modules/auth/: controller.py  dependencies.py
backend/src/modules/categories/: controller.py  model.py
backend/src/modules/transactions/: model.py  service.py
backend/src/modules/users/: controller.py  dependencies.py  model.py  schema.py  service.py
backend/src/shared/dependencies/: database.py  google_auth.py  security.py  session_user.py
backend/src/shared/security/: environments.py  token_jwt.py
backend/src/shared/utils/: exceptions.py
frontend/: package-lock.json  package.json
frontend/src/app/: app.routes.ts
frontend/src/app/interfaces/: userlogin.ts
frontend/src/app/login/: login.css  login.html  login.ts
frontend/src/app/service/: userservice.ts
